--- a/src/main/res/values-de/strings.xml
+++ b/src/main/res/values-de/strings.xml
@@ -17,39 +17,42 @@
   You should have received a copy of the GNU General Public License
   along with DroidUPNP.  If not, see <http://www.gnu.org/licenses/>.
 -->
+<!-- Updated by Matthias Dill 2014/06/10 -->
 <resources>
 
 	<!-- General -->
 	<string name="app_name">DroidUPnP</string>
+	<string name="app_url">https://github.com/trishika/DroidUPnP</string>
 	<string name="version">Version</string>
 
 	<!-- Navigation drawer -->
 	<string name="contentdirectory">Browser</string>
 	<string name="renderer">Player</string>
 	<string name="device_list_empty">Kein Gerät verfügbar</string>
-	<string name="navigation_drawer_open">Öffnen Sie Geräteliste</string>
-	<string name="navigation_drawer_close">Schließen Geräteliste</string>
+	<string name="navigation_drawer_open">Öffnen Sie die Geräteliste</string>
+	<string name="navigation_drawer_close">Schließen die Geräteliste</string>
 
 	<!--  Menu -->
 	<string name="menu_settings">Einstellungen</string>
 	<string name="menu_about">Über</string>
 	<string name="menu_refresh">Aktualisieren</string>
 	<string name="menu_quit">Schließen</string>
+	<string name="menu_search">Suchen</string>
 
 	<!-- Option -->
-	<string name="pref_contentdirectory_title">Content provider</string>
-	<string name="pref_contentdirectory_desc">Aktivieren Sie einen lokalen Content Directory Server</string>
+	<string name="pref_contentdirectory_title">Inhaltsanbieter</string>
+	<string name="pref_contentdirectory_desc">Aktivieren Sie einen lokalen Medienserver</string>
 	<string name="pref_contentDirectory_display_name">Name anzeigen</string>
 	<string name="pref_contentDirectory_share_contentdirectory">Teilen Medien</string>
 	<string name="pref_contentDirectory_share_contentdirectory_desc">Teilen Medien mit einem anderen Gerät im Netzwerk</string>
 	<string name="pref_share_media_title">Medientyp zu teilen</string>
-	<string name="pref_contentDirectory_audio_title">Audio</string>
-	<string name="pref_contentDirectory_audio_desc">Teilen Audio</string>
-	<string name="pref_contentDirectory_image_title">Bild</string>
-	<string name="pref_contentDirectory_image_desc">Bild teilen</string>
+	<string name="pref_contentDirectory_audio_title">Musik</string>
+	<string name="pref_contentDirectory_audio_desc">Musik teilen</string>
+	<string name="pref_contentDirectory_image_title">Bilder</string>
+	<string name="pref_contentDirectory_image_desc">Bilder teilen</string>
 	<string name="pref_contentDirectory_video_title">Video</string>
-	<string name="pref_contentDirectory_video_desc">Video teilen</string>
-	<string name="pref_about_title">über</string>
+	<string name="pref_contentDirectory_video_desc">Videos teilen</string>
+	<string name="pref_about_title">Über</string>
 	<string name="pref_about_desc"></string>
 	<string name="pref_theme_title">Thema</string>
 	<string name="pref_theme_desc"></string>
@@ -58,7 +61,7 @@
 	<string name="OK">OK</string>
 	<string name="loading">Lade...</string>
 	<string name="selectRenderer">Empfänger auswählen</string>
-	<string name="noRenderer">Es gibt keine Renderer verfügbar</string>
+	<string name="noRenderer">Es sind keine Renderer verfügbar</string>
 	<string name="selectContentDirectory">Server auswählen</string>
 
 	<!-- Now Playing -->
@@ -85,8 +88,18 @@
 	<string name="separator"> : </string>
 
 	<!-- About -->
+	<string name="copyright">Copyright</string>
 	<string name="about_copyright">Copyright © 2013 Aurélien Chabot</string>
 	<string name="about_contact">Kontakt : aurelien@chabot.fr</string>
+	<string name="license">Lizenz</string>
+	<string name="about_license">GPLv3</string>
+	<string name="link_license">http://www.gnu.org/licenses/gpl-3.0.html</string>
+	<string name="license_other">Bibliotheken Lizenz</string>
+	<string name="about_license_other"></string>
+	<string name="source">Quellcode</string>
+	<string name="source_url">http://github.com/trishika/droidupnp</string>
+	<string name="more">Weitere Informationen</string>
+	<string name="about_more"></string>
 	<string name="about_app">
 		<![CDATA[
 		<p><b>DroidUPnP ist freie Software und unter GPLv3 lizenziert.</b>
