--- a/src/main/res/values-de/strings.xml
+++ b/src/main/res/values-de/strings.xml
@@ -17,10 +17,12 @@
   You should have received a copy of the GNU General Public License
   along with DroidUPNP.  If not, see <http://www.gnu.org/licenses/>.
 -->
+<!-- Updated by Matthias Dill 2015 -->
 <resources>
 
 	<!-- General -->
 	<string name="app_name">DroidUPnP</string>
+	<string name="app_url">https://github.com/trishika/DroidUPnP</string>
 	<string name="version">Version</string>
 
 	<!-- Navigation drawer -->
@@ -34,16 +36,17 @@
 	<string name="menu_settings">Einstellungen</string>
 	<string name="menu_refresh">Aktualisieren</string>
 	<string name="menu_quit">Schließen</string>
+	<string name="menu_search">Suchen</string>
 
 	<!-- Option -->
 	<string name="pref_contentdirectory_title">Lokaler Server</string>
 	<string name="pref_contentdirectory_desc">Aktiviert einen loklen Medienserver</string>
 	<string name="pref_contentDirectory_display_name">Anzeigename</string>
-	<string name="pref_contentDirectory_share_contentdirectory">Medien Teilen</string>
-	<string name="pref_contentDirectory_share_contentdirectory_desc">Gewährt anderen Geräten im lokalen Netzwerk zugriff auf lokale Medien</string>
+	<string name="pref_contentDirectory_share_contentdirectory">Medien Freigeben</string>
+	<string name="pref_contentDirectory_share_contentdirectory_desc">Gewährt anderen Geräten im lokalen Netzwerk Zugriff auf lokale Medien</string>
 	<string name="pref_share_media_title">Zu teilende Medientypen</string>
 	<string name="pref_contentDirectory_audio_title">Musik</string>
-	<string name="pref_contentDirectory_audio_desc">Musikdateien freigeben</string>
+	<string name="pref_contentDirectory_audio_desc">Musik freigeben</string>
 	<string name="pref_contentDirectory_image_title">Bilder</string>
 	<string name="pref_contentDirectory_image_desc">Bilder freigeben</string>
 	<string name="pref_contentDirectory_video_title">Videos</string>
@@ -53,13 +56,13 @@
 
 	<!-- Popup -->
 	<string name="OK">OK</string>
-	<string name="loading">Lade…</string>
+	<string name="loading">Laden...</string>
 	<string name="selectRenderer">Empfänger auswählen</string>
 	<string name="noRenderer">Es ist kein Renderer verfügbar</string>
 
 	<!-- Long click options -->
 	<string name="no_action_available">Keine Aktion verfügbar</string>
-	<string name="failed_action">Fehler beim Laden der Artikel lesen</string>
+	<string name="failed_action">Fehler beim Lesen der Artikel</string>
 
 	<!-- Now Playing -->
 	<string name="duration">00:00:00</string>
@@ -85,9 +88,12 @@
 	<!-- About -->
 	<string name="copyright">Copyright</string>
 	<string name="about_copyright">Copyright © 2013 Aurélien Chabot</string>
-	<string name="license">License</string>
-	<string name="licenses_other">Library licenses</string>
+	<string name="license">Lizenz</string>
+	<string name="about_license">GPLv3</string>
+	<string name="link_license">http://www.gnu.org/licenses/gpl-3.0.html</string>
+	<string name="licenses_other">Bibliotheken Lizenz</string>
 	<string name="about_licenses_other"></string>
-	<string name="source">Source Code</string>
+	<string name="source">Quellcode</string>
+	<string name="source_url">http://github.com/trishika/droidupnp</string>
 
 </resources>
