Persist/restore state and play to DroidUPnP intent
- Persist/restore last selected renderer device in ServiceController
- Persist/restore last selected content directory device in ServiceController
- Persist/restore last path per content directory device in
  ContentDirectoryFragment
- Handle ACTION_SEND intents and play URI on last selected device in
  Main
- Implement playOnNextSelectedRendererUri in UPnPServiceController
- Implement launchUri in RendererCommand
- Sort files alphabetically before servicing in DirectoryContainer

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -100,4 +100,7 @@
 	<string name="source">Source Code</string>
 	<string name="source_url" translatable="false">http://github.com/trishika/droidupnp</string>
 
+	<!-- URL Intent-->
+	<string name="play_with_droidupnp">Play with DroidUPnP</string>
+
 </resources>
